--- a/join.html
+++ b/join.html
@@ -312,6 +312,27 @@
   </div>
 
 
+  <!--JOIN SECTION-->
+  <div class="row" style="width: 100%; padding: 0px; margin: 0px; background: #171717;">
+    <div class="col-xl-9" style="padding-top: 60px; padding-bottom: 60px;">
+      <div class="second-section d-flex align-items-center">
+        <div>
+          <h1 class="section-heading" style="color: #fff; padding-right: 10px;">SOUND GOOD?</h1>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-xl-3" style="padding-top: 60px; padding-bottom: 60px;">
+      <div class="second-section d-flex align-items-center mx-auto">
+        <div style="display: flex; align-self: start;" class="mx-auto">
+          <button onclick="window.location.href='workInProgress.html'" class="btn btn-light shadow">APPLY NOW<i
+              class="bi bi-arrow-right" , style="float: right"></i></button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
 
 
   <!--FOOTER-->
