--- a/join.html
+++ b/join.html
@@ -96,7 +96,7 @@
           </p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 10px;">
-            <button onclick="window.location.href='workInProgress.html'" class="btn btn-light shadow">OUR ACHIEVEMENTS<i
+            <button onclick="window.location.href='https://www.cautiontape.ca/about-us/achievements/'" class="btn btn-light shadow">OUR ACHIEVEMENTS<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
@@ -324,7 +324,7 @@
     <div class="col-12 col-xl-3" style="padding-top: 60px; padding-bottom: 60px;">
       <div class="second-section d-flex align-items-center mx-auto">
         <div style="display: flex; align-self: start;" class="mx-auto">
-          <button onclick="window.location.href='workInProgress.html'" class="btn btn-light shadow">APPLY NOW<i
+          <button onclick="window.location.href='https://forms.office.com/Pages/ResponsePage.aspx?id=PA5Ebz_QaUuD_BGsxHDozlrVNm6tcWFPnfmqroaBLahUNjdHWE84UzRRTTJLS1lWUFIwVElMR0VYUy4u'" class="btn btn-light shadow">APPLY NOW<i
               class="bi bi-arrow-right" , style="float: right"></i></button>
         </div>
       </div>
