Added Article Page and Started an Article

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             spacious room, new tools, great organizational features, as well as a space for us to meet.</p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-            <button onclick="window.location.href='workInProgress.html'" class="btn btn-light shadow">CHECK IT OUT<i
+            <button onclick="window.location.href='facilityarticle.html'" class="btn btn-light shadow">CHECK IT OUT<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
