--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
           </div>
           <div class="centered-bottom">
-            <button onclick="window.location.href='workInProgress.html'" class="btn btn-link">EXPLORE<i
+            <button onclick="window.location.href='changeup.html'" class="btn btn-link">EXPLORE<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
