Updates to events page

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             </div>
             <div class="col-mb-10" style="padding: 0px;">
               <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px; color: #000000;">
-                <button onclick="window.location.href='workInProgress.html'" class="btn btn-link-dark"
+                <button onclick="window.location.href='competitions.html'" class="btn btn-link-dark"
                   style="width: 250px;">MORE COMPETITIONS<i class="bi bi-arrow-right" ,
                     style="float: right"></i></button>
               </div>
