added some new stuff to pages
Note: In depth details of events is now not used, but page is still kept for some certain purposes

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
             <button
-              onclick="window.location.href='https://www.vexrobotics.com/v5/competition/vrc-current-game', '_blank'"
+              onclick="window.location.href='changeup.html', '_blank'"
               class="btn btn-light shadow">LEARN MORE<i class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
@@ -223,7 +223,7 @@
             <div class="col-mb-3" style="padding: 0px;">
               <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
                 <button onclick="window.location.href='https://www.robotevents.com/robot-competitions/vex-robotics-competition/RE-VRC-20-2626.html'" class="btn btn-light shadow">LEARN MORE<i
-                    class="bi bi-arrow-right" , style="float: right"></i></button>
+                    class="bi bi-arrow-90deg-right" , style="float: right"></i></button>
               </div>
             </div>
             <div class="col-mb-10" style="padding: 0px;">
