--- a/changeup.html
+++ b/changeup.html
@@ -126,7 +126,7 @@
           </div>
 
           <p class="body-text">
-            For the 2020-2021 Change Up season, we designed and built 3 different robots, each with different features and improvements. Our mechanical strategy for this season was to have a fast and reliable robot, because we knew the importance of getting a good Robot Skills score this season. The CT20.1. CT20.1+, and the CT20.2 EQX are all built upon this initial strategy. All of our robots this year are considered as “cycle bots” or “snail bots” as they can bring balls from the bottom of the goal to the top. Some key subsystems include the chassis, which is the wheelbase, the intake which intakes balls into the robot, the indexer which brings the ball to the top of the robot at a rapid speed for scoring, and the hood which angles the balls coming out of the robot towards the goals.
+            For the 2020-2021 Change Up season, we designed and built 3 different robots, each with different features and improvements. Our mechanical strategy for this season was to have a fast and reliable robot, because we knew the importance of getting a good Robot Skills score this season. The CT20.1. CT20.1+, and the CT20.2 EQX are all built upon this initial strategy. All of our robots this year are considered as “cycle bots” or “snail bots” as they can bring balls from the bottom of the goal to the top.
           </p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
