home page heading updates
changed some headings on the home page to h2 for seo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
   <link rel="stylesheet" href="https://use.typekit.net/ggr3dqq.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 
 
@@ -88,7 +89,7 @@
               VRC SEASON</span>
           </div>
 
-          <h1 class="section-heading">CHANGE UP</h1>
+          <h2 class="section-heading">CHANGE UP</h2>
 
           <p class="body-text">VEX Robotics Competition Change Up is played on a 12’x12’ square field configured as seen
             above. Two Alliances – one “red” and one “blue” – composed of two Teams each, compete in matches consisting
@@ -124,7 +125,7 @@
               style="color: #000000;">WORKSPACE</span>
           </div>
 
-          <h1 class="section-heading" style="color: #000000;">OUR NEW FACILITY</h1>
+          <h2 class="section-heading" style="color: #000000;">OUR NEW FACILITY</h2>
 
           <p class="body-text" style="color: #000000;">Our new facility in Markham Ontario is equipped with a large
             spacious room, new tools, great organizational features, as well as a space for us to meet.</p>
@@ -198,7 +199,7 @@
               style="color: #000000;">RECENT</span>
           </div>
 
-          <h1 class="section-heading" style="color: #000000;">INAUGURAL CAUTION TAPE CLASSIC</h1>
+          <h2 class="section-heading" style="color: #000000;">INAUGURAL CAUTION TAPE CLASSIC</h2>
 
           <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
             <div class="col-md-9" style="padding: 0px;">
@@ -260,7 +261,7 @@
               style="color: #fff;">VRC TEAM 839</span>
           </div>
 
-          <h1 class="section-heading" style="color: #fff;">WHO WE ARE</h1>
+          <h2 class="section-heading" style="color: #fff;">WHO WE ARE</h2>
 
           <p class="body-text" style="color: #fff; max-width: 1000px;">At VRC Team 839, we are an agile group of like minded students in middle school and high school who have a passion for STEM, competition, and robotics.</p>
 
