added link to season pics

--- a/index.html
+++ b/index.html
@@ -152,37 +152,43 @@
 
     <div class="col-md-6" style="padding: 0px;">
       <div class="third-section d-flex align-items-center">
-        <div>
-          <img src="img/changeuptwo.jpg" alt="change up robot two" class="responsive" style="position: relative;">
-          <div class="centered">
-            <h1 class="third-section-txt">CHANGE</h1>
-            <h1 class="third-section-txt">UP</h1>
-
+        <a href="changeup.html">
+          <div>
+            <img src="img/changeuptwo.jpg" alt="change up robot two" class="responsive" style="position: relative;">
+            <div class="centered">
+              <h1 class="third-section-txt">CHANGE</h1>
+              <h1 class="third-section-txt">UP</h1>
+  
+            </div>
+            <div class="centered-bottom">
+              <button onclick="window.location.href='changeup.html'" class="btn btn-link">EXPLORE<i
+                  class="bi bi-arrow-right" , style="float: right"></i></button>
+            </div>
+  
           </div>
-          <div class="centered-bottom">
-            <button onclick="window.location.href='changeup.html'" class="btn btn-link">EXPLORE<i
-                class="bi bi-arrow-right" , style="float: right"></i></button>
-          </div>
-
-        </div>
+        </a>
+        
       </div>
     </div>
 
     <div class="col-md-6" style="padding: 0px;">
       <div class="third-section d-flex align-items-center">
-        <div>
-          <img src="img/towertakeoverone.jpg" alt="change up robot two" class="responsive"
-            style="position: relative; text-align: center;">
-          <div class="centered">
-            <h1 class="third-section-txt">TOWER</h1>
-            <h1 class="third-section-txt">TAKEOVER</h1>
-
+        <a href="towertakeover.html">
+          <div>
+            <img src="img/towertakeoverone.jpg" alt="change up robot two" class="responsive"
+              style="position: relative; text-align: center;">
+            <div class="centered">
+              <h1 class="third-section-txt">TOWER</h1>
+              <h1 class="third-section-txt">TAKEOVER</h1>
+  
+            </div>
+            <div class="centered-bottom">
+              <button onclick="window.location.href='towertakeover.html'" class="btn btn-link">EXPLORE<i
+                  class="bi bi-arrow-right" , style="float: right"></i></button>
+            </div>
           </div>
-          <div class="centered-bottom">
-            <button onclick="window.location.href='towertakeover.html'" class="btn btn-link">EXPLORE<i
-                class="bi bi-arrow-right" , style="float: right"></i></button>
-          </div>
-        </div>
+        </a>
+        
       </div>
     </div>
   </div>
