added nav bar to some pages

--- a/towertakeover.html
+++ b/towertakeover.html
@@ -81,7 +81,7 @@
         <div>
           
 
-          <h1 class="game-page-header">TOWER TAKEOVER</h1>
+          <h1 class="game-page-header">TOWER <span style="color: #fff700;">TAKEOVER</span></h1>
 
           <div style="text-align: left;">
             <span
