--- a/changeup.html
+++ b/changeup.html
@@ -65,7 +65,7 @@
 
 <body class="h-100 text-center darkbkg">
 
-  <header class="mb-auto p-3" style="padding-top: 15px; padding-bottom: 40px;">
+  <header class="mb-auto p-1" style="padding-top: 15px; padding-bottom: 40px;">
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
@@ -75,7 +75,7 @@
                 <a class="nav-link" style="color: white;" href="workInProgress.html">ABOUT</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: white;" href="changeup.html">SEASON</a>
+                <a class="nav-link" style="color: white;" href="changeup.html"><i class="bi bi-dot navbar-selected-dot"></i>SEASON</a>
               </li>
               
             </ul>
