--- a/competitions.html
+++ b/competitions.html
@@ -65,7 +65,7 @@
 
 <body class="h-100 text-center">
 
-  <header class="mb-auto p-3" style="padding-top: 15px; padding-bottom: 40px;">
+  <header class="mb-auto p-1" style="padding-top: 15px; padding-bottom: 40px;">
     <div>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
@@ -93,7 +93,7 @@
           <div class="collapse navbar-collapse order-3" style="width: 200px;" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" style="color: black;" href="competitions.html">COMPETITION</a>
+                <a class="nav-link" style="color: black;" href="competitions.html"><i class="bi bi-dot navbar-selected-dot"></i>COMPETITION</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" style="color: black;" href="join.html">JOIN</a>
