--- a/join.html
+++ b/join.html
@@ -48,7 +48,7 @@
 
 
   <!--TITLE SPLASH-->
-  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" style="width: 100%; padding: 0px;">
+  <div class="cover-container d-flex w-100 h-100 p-1 mx-auto flex-column" style="width: 100%; padding: 0px;">
     <header class="mb-auto">
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark">
@@ -80,7 +80,7 @@
                   <a class="nav-link" style="color: white;" href="competitions.html">COMPETITION</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style="color: white;" href="join.html">JOIN</a>
+                  <a class="nav-link" style="color: white;" href="join.html"><i class="bi bi-dot navbar-selected-dot"></i>JOIN</a>
                 </li>
               </ul>
             </div>
