--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="collapse navbar-collapse order-1 order-lg-0" style="width: 200px;" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" style="color: white;" href="workInProgress.html">ABOUT</a>
+                  <a class="nav-link" style="color: white;" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" style="color: white;" href="changeup.html">SEASON</a>
@@ -345,7 +345,7 @@
           <p class="body-text" style="color: #fff; max-width: 1000px;">At VRC Team 839, we are an agile group of like minded students in middle school and high school who have a passion for STEM, competition, and robotics.</p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-            <button onclick="window.location.href='about.html'" class="btn btn-light shadow">OUR STORY<i
+            <button onclick="window.location.href='about.html'" class="btn btn-light shadow">LEARN MORE<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
