about page nav sync

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         font-size: 3.5rem;
       }
     }
+
+    pre {
+      white-space: pre-wrap;
+    }
   </style>
 
 
@@ -200,7 +204,7 @@
             </div>
             <div class="centered-bottom">
               <button onclick="window.location.href='changeup.html'" class="btn btn-link">EXPLORE<i
-                  class="bi bi-arrow-right" , style="float: right"></i></button>
+                  class="bi bi-arrow-right-circle" , style="float: right"></i></button>
             </div>
   
           </div>
@@ -222,7 +226,7 @@
             </div>
             <div class="centered-bottom">
               <button onclick="window.location.href='towertakeover.html'" class="btn btn-link">EXPLORE<i
-                  class="bi bi-arrow-right" , style="float: right"></i></button>
+                  class="bi bi-arrow-right-circle" , style="float: right"></i></button>
             </div>
           </div>
         </a>
@@ -243,7 +247,7 @@
               style="color: #000000;">RECENT</span>
           </div>
 
-          <h2 class="section-heading" style="color: #000000;">INAUGURAL CAUTION TAPE CLASSIC</h2>
+          <h2 class="section-heading" style="color: #000000;">VEX WORLDS 2021</h2>
 
           <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
             <div class="col-md-9" style="padding: 0px;">
@@ -256,10 +260,10 @@
             <div class="col-12 col-md-3" style="padding: 0px;">
               <pre class="fourth-section-score">
 <b>Results:</b>
-1. 16868A
-2. 839A
-3. 839Z
-4. 82050A
+<i class="bi bi-dot"></i>839Z Rank: #1
+<i class="bi bi-dot"></i>839A Rank: #36
+<i class="bi bi-dot"></i>Division Skills Champion
+<i class="bi bi-dot"></i>Think Award
                 </pre>
             </div>
           </div>
@@ -267,14 +271,14 @@
           <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
             <div class="col-mb-3" style="padding: 0px;">
               <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-                <button onclick="window.location.href='https://www.robotevents.com/robot-competitions/vex-robotics-competition/RE-VRC-20-2626.html'" class="btn btn-light shadow">LEARN MORE<i
-                    class="bi bi-arrow-90deg-right" , style="float: right"></i></button>
+                <button onclick="window.location.href='https://www.robotevents.com/robot-competitions/vex-robotics-competition/RE-VRC-20-2626.html'" class="btn btn-light shadow">COMPETITION RECAP<i
+                    class="bi bi-arrow-right" , style="float: right"></i></button>
               </div>
             </div>
             <div class="col-mb-10" style="padding: 0px;">
               <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px; color: #000000;">
                 <button onclick="window.location.href='competitions.html'" class="btn btn-link-dark"
-                  style="width: 250px;">MORE COMPETITIONS<i class="bi bi-arrow-right" ,
+                  style="width: 250px;">MORE COMPETITIONS<i class="bi bi-arrow-right-circle" ,
                     style="float: right"></i></button>
               </div>
             </div>
@@ -459,7 +463,7 @@
         <div class="footer-section justify-content-lg-end justify-content-center d-flex align-items-center px-lg-2 py-3">
           <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link black-text" href="workInProgress.html">ABOUT</a>
+              <a class="nav-link black-text" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link black-text" href="competitions.html">COMPETITION</a>
