--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
             <div class="collapse navbar-collapse order-1 order-lg-0" style="width: 200px;" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" style="color: white;" href="workInProgress.html">ABOUT</a>
+                  <a class="nav-link" style="color: white;" href="#"><i class="bi bi-dot navbar-selected-dot"></i>ABOUT</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" style="color: white;" href="changeup.html">SEASON</a>
@@ -531,7 +531,7 @@
         <div class="footer-section justify-content-lg-end justify-content-center d-flex align-items-center px-lg-2 py-3">
           <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link black-text" href="workInProgress.html">ABOUT</a>
+              <a class="nav-link black-text" href="about.html">ABOUT</a>
             </li>
             <li class="nav-item">
               <a class="nav-link black-text" href="competitions.html">COMPETITION</a>
