--- a/index.html
+++ b/index.html
@@ -251,11 +251,7 @@
 
           <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
             <div class="col-md-9" style="padding: 0px;">
-              <p class="body-text" style="color: #000000;">Welcome to the first ever Caution Tape Classic! This special
-                event was created to allow teams, during the global Covid-19 pandemic, to still participate in live
-                skills matches in a safe and managed way. A limited number of teams were allowed, and the teams were
-                also subject to VEX judging, something not previously possible with online remote competitions. Special
-                custom trophies were given out to celebrate this special event! </p>
+              <p class="body-text" style="color: #000000;">The 2021 VRC World Championship was a great way to end off the season. Middle school team 839Z scored a combined point of 198 in the second (Venus) division, taking home division skills champion as well as Think Award. High school team 839A was placed in the strong first (Mercury) division, but unfortunately due to autonomous run issues only scored 198 points. Overall, the team had a lot of fun preparing and attending remote VEX Worlds!</p>
             </div>
             <div class="col-12 col-md-3" style="padding: 0px;">
               <pre class="fourth-section-score">
