--- a/changeup.html
+++ b/changeup.html
@@ -137,7 +137,7 @@
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
             <button
-              onclick="window.location.href='https://www.vexrobotics.com/v5/competition/vrc-current-game', '_blank'"
+              onclick="window.location.href='https://www.roboticseducation.org/competition-history/', '_blank'"
               class="btn btn-light shadow">LEARN MORE<i class="bi bi-arrow-90deg-right" , style="float: right"></i></button>
           </div>
 
