--- a/join.html
+++ b/join.html
@@ -136,7 +136,7 @@
           </p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 10px;">
-            <button onclick="window.location.href='https://www.cautiontape.ca/about-us/achievements/'" class="btn btn-light shadow">OUR ACHIEVEMENTS<i
+            <button onclick="window.location.href='about.html'" class="btn btn-light shadow">MORE ABOUT US<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
