--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <p class="body-text" style="color: #fff; max-width: 1000px;">At VRC Team 839, we are an agile group of like minded students in middle school and high school who have a passion for STEM, competition, and robotics.</p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-            <button onclick="window.location.href='about.html'" class="btn btn-light shadow">LEARN MORE<i
+            <button onclick="window.location.href='about.html'" class="btn btn-light shadow">ABOUT US<i
                 class="bi bi-arrow-right" , style="float: right"></i></button>
           </div>
 
