format and content

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
     <main class="px-3">
 
       <p class="title-subheading">ABOUT US</p>
-      <h1 class="title-name" style="color: #fff; font-size: 9vw;">GET TO KNOW THE TEAM</h1>
+      <h1 class="title-name" style="color: #fff;">GET TO KNOW THE TEAM</h1>
       
     </main>
 
@@ -228,7 +228,7 @@
 
           <h1 class="section-heading">TEAM 839A</h1>
 
-          <p class="body-text">The CT20.2 EQX was our final and best robot for the Change Up season. This robot featured a completely new design, as well as added speed for scoring and new smart features. This robot was started during the winter break, in December. Our third-generation robot used a completely new chassis, as it was running on an X-drive.</p>
+          <p class="body-text">VRC Team 839A is a High School VEX Robotics Competition team. Team 839A competes with the top teams in Ontario, having won one Tournament Champion award as well as multiple Tournament Finalist awards. The team members on 839A have gained experience in VRC throughout their three seasons currently, and many members have past robotics experiences from competitions such as FLL and WRO. 839A also helps guide the way for 839Z in their journey in VEX.</p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
             <div class="row" style="width: 100%; padding-left: 20px;">
@@ -322,7 +322,7 @@
 
           <h1 class="section-heading">TEAM 839Z</h1>
 
-          <p class="body-text">The CT20.1+ was an incremental update from the prior robot, and saw a major carryover from the CT20.1. Our second robot was more of a refinement than a full redesign. In this iteration for instance, our main structure remained the same, however it saw major design improvements to the intake system, as well as the hood.</p>
+          <p class="body-text">VRC Team 839Z is a Middle School VEX Robotics Competition team. Team 839Z is comprised of many hard-working students in the middle school age group, working together to achieve greatness. 839Z has put out many impressive results, such as Venus Division Skills Champion at the 2021 VEX World Championships. Team 839Z is also a place where team members can develop their skills in VEX, to be ready when the day to move up to 839A comes. </p>
 
           <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
             <div class="row" style="width: 100%; padding-left: 20px;">
