--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               style="color: #000000;">WORKSPACE</span>
           </div>
 
-          <h2 class="section-heading" style="color: #000000;">OUR NEW FACILITY</h2>
+          <h2 class="section-heading" style="color: #000000; padding-right: 20px;">OUR NEW FACILITY</h2>
 
           <p class="body-text" style="color: #000000;">Our new facility in Markham Ontario is equipped with a large
             spacious room, new tools, great organizational features, as well as a space for us to meet.</p>
@@ -247,7 +247,7 @@
               style="color: #000000;">RECENT</span>
           </div>
 
-          <h2 class="section-heading" style="color: #000000;">VEX WORLDS 2021</h2>
+          <h2 class="section-heading" style="color: #000000; padding-right: 20px;">VEX WORLDS 2021</h2>
 
           <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
             <div class="col-md-9" style="padding: 0px;">
@@ -267,8 +267,8 @@
           <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
             <div class="col-mb-3" style="padding: 0px;">
               <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-                <button onclick="window.location.href='https://www.robotevents.com/robot-competitions/vex-robotics-competition/RE-VRC-20-2626.html'" class="btn btn-light shadow">COMPETITION RECAP<i
-                    class="bi bi-arrow-right" , style="float: right"></i></button>
+                <button onclick="window.location.href='https://www.roboticseducation.org/vex-robotics-world-championship/'" class="btn btn-light shadow">COMPETITION RECAP<i
+                    class="bi bi-arrow-90deg-right" , style="float: right"></i></button>
               </div>
             </div>
             <div class="col-mb-10" style="padding: 0px;">
@@ -340,7 +340,7 @@
               style="color: #fff;">VRC TEAM 839</span>
           </div>
 
-          <h2 class="section-heading" style="color: #fff;">WHO WE ARE</h2>
+          <h2 class="section-heading" style="color: #fff; padding-right: 20px;">WHO WE ARE</h2>
 
           <p class="body-text" style="color: #fff; max-width: 1000px;">At VRC Team 839, we are an agile group of like minded students in middle school and high school who have a passion for STEM, competition, and robotics.</p>
 
