test thing for scrolling delay

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body class="text-center text-white darkbkg home-background">
-  <div data-scroll-container>
+  <div data-scroll-container locomotive-scroll>
     <!--TITLE SPLASH-->
     <div data-scroll-section style="width: 100%; padding: 0px; height: 100vh;" class="cover-container d-flex w-100 p-1 mx-auto flex-column">
       <header class="mb-auto" style="width: 100%;">
