--- a/join.html
+++ b/join.html
@@ -45,7 +45,7 @@
 
 <body class="text-center darkbkg text-white join-background">
 
-  <div data-scroll-container>
+  <div data-scroll-container locomotive-scroll>
     <!--TITLE SPLASH-->
   <div data-scroll-section style="width: 100%; padding: 0px; height: 100vh;" class="cover-container d-flex w-100 p-1 mx-auto flex-column">
     <header class="mb-auto">
