--- a/changeup.html
+++ b/changeup.html
@@ -67,7 +67,7 @@
 <body class="h-100 text-center darkbkg">
 
   <div data-scroll-container>
-    <header class="mb-auto p-1" style="padding-top: 15px; padding-bottom: 40px;">
+    <header data-scroll-section class="mb-auto p-1" style="padding-top: 15px; padding-bottom: 40px;">
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark">
           <div class="container-fluid">
@@ -116,7 +116,7 @@
         GO BACK<i class="bi bi-arrow-90deg-left" , style="float: left"></i></button>
     </p>
   
-    <div class="row text-white" style="width: 100%; padding: 0px; margin: 0px; padding-top: 60px;">
+    <div data-scroll-section class="row text-white" style="width: 100%; padding: 0px; margin: 0px; padding-top: 60px;">
       <div class="col-lg-8" style="padding: 0px;">
         <div class="first-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
@@ -154,7 +154,7 @@
     </div>
   
   
-    <div class="row" style="width: 100%; padding: 0px; margin: 0px; padding-top: 60px;">
+    <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px; padding-top: 60px;">
       <div class="col-xl-12" style="padding: 0px; height: min-content; min-height: min-content;">
         <div class="white-section d-flex align-items-center" style="padding-top: 100px; padding-bottom: 55px;">
           <div>
@@ -186,7 +186,7 @@
   
   
     <!--ROBOT 1-->
-    <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
+    <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px;">
       <div class="col-lg-8" style="padding: 0px;">
         <div class="fourth-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
@@ -210,7 +210,7 @@
     </div>
   
     <!--ROBOT 2-->
-    <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
+    <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px;">
   
       
   
@@ -239,7 +239,7 @@
     </div>
   
     <!--ROBOT 3-->
-    <div class="row" style="width: 100%; padding: 0px; margin: 0px;">
+    <div data-scroll-section class="row" style="width: 100%; padding: 0px; margin: 0px;">
       <div class="col-lg-8" style="padding: 0px;">
         <div class="fourth-section d-flex align-items-center" style="padding-top: 30px;">
           <div>
@@ -265,7 +265,7 @@
   
   
     <!--FOOTER-->
-    <footer>
+    <footer data-scroll-section>
   
       <div class="row" style="width: 100%; padding: 0px; margin: 0px; min-height: 600px;">
         <div class="col-xl-5" style="padding: 0px; background: #e7e013;">
