scroll fix and info update

--- a/changeup.html
+++ b/changeup.html
@@ -111,7 +111,7 @@
       </div>
     </header>
   
-    <p style="padding-left: 20px; padding-top: 20px; float: left;">
+    <p data-scroll-section style="padding-left: 20px; padding-top: 20px; float: left;">
       <button onclick="window.history.back()" class="btn btn-link" style="color: #fff;">
         GO BACK<i class="bi bi-arrow-90deg-left" , style="float: left"></i></button>
     </p>
