--- a/index.html
+++ b/index.html
@@ -127,23 +127,16 @@
           <div>
             <div style="text-align: left;">
               <span class="section-subheadingct" style="color:#fff700;">//</span><span
-                class="section-subheading">2020-2021
+                class="section-subheading">2021-2022
                 VRC SEASON</span>
             </div>
 
-            <h2 class="section-heading">CHANGE UP</h2>
+            <h2 class="section-heading">TIPPING POINT</h2>
 
-            <p class="body-text">VEX Robotics Competition Change Up is played on a 12’x12’ square field configured as
-              seen
-              above. Two Alliances – one “red” and one “blue” – composed of two Teams each, compete in matches
-              consisting
-              of a fifteen second Autonomous Period, followed by a one minute and forty-five second (1:45) Driver
-              Controlled Period. The object of the game is to attain a higher score than the opposing Alliance by
-              placing
-              Balls in Goals, and Connecting Rows. </p>
+            <p class="body-text">VEX Robotics Competition Tipping Point is played on a 12’x12’ square field configured as seen above. Two Alliances – one “red” and one “blue” – composed of two Teams each, compete in matches consisting of a fifteen second Autonomous Period, followed by a one minute and forty-five second Driver Controlled Period. The object of the game is to attain a higher score than the opposing Alliance by Scoring Rings, moving Mobile Goals to Alliance Zones, and by Elevating on Platforms at the end of a Match. </p>
 
             <div style="display: flex; align-self: start; padding-left: 40px; padding-bottom: 40px;">
-              <button onclick="window.location.href='changeup.html', '_blank'" class="btn btn-light shadow">LEARN MORE<i
+              <button onclick="window.location.href='https://www.vexrobotics.com/v5/competition/vrc-current-game', '_blank'" class="btn btn-light shadow">LEARN MORE<i
                   class="bi bi-arrow-right" , style="float: right"></i></button>
             </div>
 
@@ -152,7 +145,7 @@
       </div>
       <div class="col-12 col-xl-4" style="padding: 0px;">
         <div>
-          <img src="img/changeupone.jpg" alt="change up robot" class="responsive">
+          <img src="img/2021-2022/tipping point.jpg" alt="change up robot" class="responsive">
         </div>
 
       </div>
