--- a/changeup.html
+++ b/changeup.html
@@ -64,9 +64,9 @@
   <link href="main.css" rel="stylesheet">
 </head>
 
-<body class="h-100 text-center darkbkg">
+<body data-scroll-container class="h-100 text-center darkbkg">
 
-  <div data-scroll-container>
+  <div>
     <header data-scroll-section class="mb-auto p-1" style="padding-top: 15px; padding-bottom: 40px;">
       <div>
         <nav class="navbar navbar-expand-lg navbar-dark">
