--- a/changeup.html
+++ b/changeup.html
@@ -64,7 +64,7 @@
   <link href="main.css" rel="stylesheet">
 </head>
 
-<body data-scroll-container class="h-100 text-center darkbkg">
+<body data-scroll-container class="text-center darkbkg">
 
   <div>
     <header data-scroll-section class="mb-auto p-1" style="padding-top: 15px; padding-bottom: 40px;">
