--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
   <link href="main.css" rel="stylesheet">
 </head>
 
-<body data-scroll-container class="text-center text-white darkbkg home-background">
-  <div>
+<body class="text-center text-white darkbkg home-background">
+  <div data-scroll-container>
     <!--TITLE SPLASH-->
     <div data-scroll-section style="width: 100%; padding: 0px; height: 100vh;" class="cover-container d-flex w-100 p-1 mx-auto flex-column">
       <header class="mb-auto" style="width: 100%;">
